--- a/RecommenuBeta/RecommenuBeta/Base.lproj/Main.storyboard
+++ b/RecommenuBeta/RecommenuBeta/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ARE YOU AT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GT8-sA-SKD">
                                                 <rect key="frame" x="61" y="64" width="142" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="18"/>
+                                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="14"/>
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -165,13 +165,6 @@
                                                     <outlet property="delegate" destination="WW4-31-mjr" id="IWD-hm-ius"/>
                                                 </connections>
                                             </tableView>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="I'M AT..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1CH-Ca-N4u">
-                                                <rect key="frame" x="98" y="20" width="72" height="21"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="16"/>
-                                                <color key="textColor" red="0.25490196079999999" green="0.25098039220000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
@@ -1758,30 +1751,47 @@
     </scenes>
     <resources>
         <image name="button_back.png" width="10" height="18"/>
+        <image name="button_back.png" width="10" height="18"/>
         <image name="button_x.png" width="16" height="16"/>
         <image name="dividing_line.png" width="2" height="37"/>
         <image name="facebook_off.png" width="29" height="29"/>
         <image name="filter_bar.png" width="321" height="39"/>
+        <image name="filter_bar.png" width="321" height="39"/>
+        <image name="foodie_certified.png" width="29" height="29"/>
         <image name="foodie_certified.png" width="29" height="29"/>
         <image name="foodie_overlay.png" width="264" height="200"/>
+        <image name="gradient.png" width="320" height="548"/>
+        <image name="gradient.png" width="320" height="548"/>
         <image name="gradient.png" width="320" height="548"/>
         <image name="icon_foodie_activate.png" width="37" height="36"/>
         <image name="icon_home.png" width="31" height="29"/>
         <image name="icon_list.png" width="28" height="21"/>
+        <image name="icon_list.png" width="28" height="21"/>
         <image name="icon_menu.png" width="20" height="20"/>
+        <image name="icon_profile.png" width="31" height="29"/>
         <image name="icon_profile.png" width="31" height="29"/>
         <image name="icon_search.png" width="31" height="29"/>
         <image name="icon_settings.png" width="31" height="29"/>
-        <image name="logo.png" width="197" height="26"/>
-        <image name="overlay_card.png" width="268" height="406"/>
+        <image name="logo.png" width="177" height="30"/>
+        <image name="logo.png" width="177" height="30"/>
+        <image name="overlay_card.png" width="265" height="402"/>
         <image name="overlay_crowd.png" width="272" height="127"/>
         <image name="pattern_fullscreen.png" width="320" height="548"/>
-        <image name="popup_location.png" width="265" height="200"/>
+        <image name="pattern_fullscreen.png" width="320" height="548"/>
+        <image name="popup_location.png" width="264" height="200"/>
         <image name="popup_ratingbreakdown.png" width="265" height="299"/>
         <image name="thumbs_up_profile.png" width="38" height="38"/>
-        <image name="top_bar.png" width="324" height="68"/>
+        <image name="thumbs_up_profile.png" width="38" height="38"/>
+        <image name="top_bar.png" width="320" height="69"/>
+        <image name="top_bar.png" width="320" height="69"/>
+        <image name="top_bar.png" width="320" height="69"/>
+        <image name="top_bar.png" width="320" height="69"/>
+        <image name="top_bar.png" width="320" height="69"/>
+        <image name="top_bar.png" width="320" height="69"/>
+        <image name="top_bar.png" width="320" height="69"/>
         <image name="top_section.png" width="320" height="119"/>
         <image name="top_section_2.png" width="320" height="86"/>
+        <image name="user_default_profile.png" width="69" height="69"/>
         <image name="user_default_profile.png" width="69" height="69"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
@@ -1790,10 +1800,10 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="rFS-ke-nUk"/>
-        <segue reference="plp-gg-ybT"/>
+        <segue reference="bcv-3n-CFm"/>
+        <segue reference="TTi-zm-ZOE"/>
         <segue reference="ztB-NW-RyU"/>
         <segue reference="1ex-Vq-BDP"/>
-        <segue reference="TTi-zm-ZOE"/>
+        <segue reference="plp-gg-ybT"/>
     </inferredMetricsTieBreakers>
 </document>
