--- a/RecommenuBeta/RecommenuBeta/Base.lproj/Main.storyboard
+++ b/RecommenuBeta/RecommenuBeta/Base.lproj/Main.storyboard
@@ -623,11 +623,8 @@
                         <outlet property="restNameLabel" destination="iv2-go-pNV" id="yDz-Qu-HQU"/>
                         <outlet property="rightSectionLabel" destination="ERq-iB-iYO" id="anw-pt-A9f"/>
                         <outlet property="shroudView" destination="9hK-IC-2ex" id="ujW-Ec-8OS"/>
-                        <segue destination="MhZ-4q-dlO" kind="modal" identifier="menuToHome" id="owa-kF-TAU"/>
-                        <segue destination="nPB-js-U8b" kind="modal" identifier="menuToOtherProfile" id="plp-gg-ybT"/>
                         <segue destination="nPB-js-U8b" kind="push" identifier="menuToOtherProfilePush" id="hBb-60-GB1"/>
                         <segue destination="59y-sm-h19" kind="push" identifier="menuToRatingPush" id="ztB-NW-RyU"/>
-                        <segue destination="59y-sm-h19" kind="modal" identifier="menuToRating" id="aNu-Mb-MV3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UM4-ek-pxW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -804,7 +801,7 @@
                                         <rect key="frame" x="20" y="101" width="280" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="16"/>
-                                        <color key="textColor" red="0.25882352939999997" green="0.25882352939999997" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="textColor" red="0.0039215686274509803" green="0.79607843137254897" blue="0.80392156862745101" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Search a restaurant to find it's menu!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="THH-Si-GhV">
@@ -1168,7 +1165,7 @@
                                     <constraint firstAttribute="centerY" secondItem="ifK-me-u46" secondAttribute="centerY" constant="-0.5" id="lrX-Ek-IVI"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="80" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="S3M-ZD-ylj">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="S3M-ZD-ylj">
                                 <rect key="frame" x="0.0" y="173" width="320" height="345"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -1535,7 +1532,6 @@
                         <outlet property="menuButton" destination="7em-hp-ZC2" id="S29-dc-l7T"/>
                         <outlet property="restNameLabel" destination="LQu-h0-eCW" id="h1g-lC-aED"/>
                         <outlet property="rightSectionLabel" destination="z9f-Nq-hbx" id="NlH-Ik-3Ym"/>
-                        <segue destination="MhZ-4q-dlO" kind="modal" identifier="ratingToHome" id="TTi-zm-ZOE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Wo-7E-KAu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1577,10 +1573,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="80" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="9Tg-TN-w0p">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="80" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="9Tg-TN-w0p">
                                 <rect key="frame" x="0.0" y="155" width="320" height="413"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="aqj-6b-P5r"/>
+                                </constraints>
                                 <inset key="separatorInset" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ratingCell" rowHeight="80" id="Rpq-TX-tyN" customClass="RMUProfileRatingCell">
@@ -1730,11 +1729,17 @@
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9Tg-TN-w0p" firstAttribute="leading" secondItem="HQ2-99-88F" secondAttribute="leading" id="YjJ-fG-2bQ"/>
+                            <constraint firstItem="jOR-ld-EHo" firstAttribute="top" secondItem="9Tg-TN-w0p" secondAttribute="bottom" constant="-49" id="p6A-Md-0gN"/>
+                            <constraint firstItem="9Tg-TN-w0p" firstAttribute="top" secondItem="O2l-cd-8p1" secondAttribute="bottom" constant="135" id="qra-Mi-gsB"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="icon_profile.png" id="9v5-LF-wan">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
                     </tabBarItem>
                     <navigationItem key="navigationItem" id="gNV-Od-tLG"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="blogButton" destination="Cfa-u1-Afk" id="Jl5-EI-e2P"/>
                         <outlet property="foodieBadge" destination="P6k-5W-kbO" id="RXc-kL-CE1"/>
@@ -1749,7 +1754,6 @@
                         <outlet property="ratingTable" destination="9Tg-TN-w0p" id="hCV-re-e1M"/>
                         <outlet property="topProfileView" destination="Gdo-y8-dNM" id="G58-CK-QCy"/>
                         <segue destination="fSl-jZ-xSI" kind="push" identifier="otherProfileToMenu" id="rFS-ke-nUk"/>
-                        <segue destination="MhZ-4q-dlO" kind="modal" identifier="otherProfileToHome" id="x0D-xH-USx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NAL-6v-ROd" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1857,10 +1861,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="x0D-xH-USx"/>
-        <segue reference="plp-gg-ybT"/>
+        <segue reference="k7B-Te-j8Z"/>
         <segue reference="rFS-ke-nUk"/>
-        <segue reference="ztB-NW-RyU"/>
         <segue reference="1ex-Vq-BDP"/>
     </inferredMetricsTieBreakers>
 </document>
